# ALDS

./: CMakeLists.txt  create_new.sh  create_new2.sh  new.sh
ALDS1_Allocation/: main.cpp  test.cpp
ALDS1_Binary_Search_Tree1/: main.cpp
ALDS1_Binary_Search_Tree2/: main.cpp
ALDS1_Binary_Search_Tree3/: main.cpp
ALDS1_Binary_Tree/: main.cpp
ALDS1_Binary_search/: ALDS1_binary_search.cpp
ALDS1_Breadth_First_Search/: main.cpp
ALDS1_Complete_Binary_Tree/: main.cpp
ALDS1_Connected_Components/: main.cpp
ALDS1_Counting_Sort/: main.cpp
ALDS1_Depth_First_Search/: main.cpp
ALDS1_Exhaustive_Search/: 2_output.txt  main.cpp  test.cpp
ALDS1_Fibonacci_Number/: main.cpp
ALDS1_Graph/: main.cpp
ALDS1_Koch_Curve/: main.cpp
ALDS1_Linear_search/: ALDS1_linear_search.cpp
ALDS1_Longest_Common_Subsequence/: main.cpp
ALDS1_Matrix_Chain_Multiplication/: main.cpp
ALDS1_Maximum_Heap/: main.cpp
ALDS1_Merge_Sort/: main.cpp
ALDS1_Partition/: main.cpp
ALDS1_Queue/: ALDS1_queue.cpp
ALDS1_Quick_Sort/: main.cpp
ALDS1_Reconstruction_of_the_Tree/: main.cpp
ALDS1_Rooted_Trees/: main.cpp
ALDS1_Selection_sort/: ALDS1_selection_sort.cpp
ALDS1_Single_Source_Shortest_Path_I/: main.cpp
ALDS1_Stack/: 1_input.txt  main.cpp  test.cpp
ALDS1_Tree_Walk/: main.cpp
ALDS_Priority_Queue/: main.cpp
ITP1_Circle_in_a_Rectangle/: main.cpp
ITP1_Hello_World/: main.cpp
ITP1_How_Many_Divisors/: main.cpp
ITP1_How_many_ways/: main.cpp
ITP1_Print_Many_Hello_World/: main.cpp
ITP1_Print_Test_Cases/: main.cpp
ITP1_Range/: main.cpp
ITP1_Rectangle/: main.cpp
ITP1_Small_Large_or_Equal/: main.cpp
ITP1_Sorting_Three_Numbers/: main.cpp
ITP1_Swapping_Two_Numbers/: main.cpp
ITP1_Watch/: main.cpp
ITP1_X_Cubic/: main.cpp
