#cmake_minimum_required(VERSION 3.14)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

# Contest abc 130
add_executable(ALDS1_Stack_main ALDS1_Stack/main.cpp)
add_executable(ALDS1_Stack_test ALDS1_Stack/test.cpp)

add_executable(ALDS1_Allocation_main ALDS1_Allocation/main.cpp)
add_executable(ALDS1_Allocation_test ALDS1_Allocation/test.cpp)

add_executable(ALDS1_Exhaustive_Search_main ALDS1_Exhaustive_Search/main.cpp)
add_executable(ALDS1_Exhaustive_Search_test ALDS1_Exhaustive_Search/test.cpp)

add_executable(ALDS1_Koch_Curve ALDS1_Koch_Curve/main.cpp)

add_executable(ALDS1_Merge_Sort ALDS1_Merge_Sort/main.cpp)

add_executable(ALDS1_Partition ALDS1_Partition/main.cpp)

add_executable(ALDS1_Quick_Sort ALDS1_Quick_Sort/main.cpp)

add_executable(ALDS1_Counting_Sort ALDS1_Counting_Sort/main.cpp)

add_executable(ALDS1_Rooted_Trees ALDS1_Rooted_Trees/main.cpp)

add_executable(ALDS1_Binary_Tree ALDS1_Binary_Tree/main.cpp)

add_executable(ALDS1_Tree_Walk ALDS1_Tree_Walk/main.cpp)

add_executable(ALDS1_Reconstruction_of_the_Tree ALDS1_Reconstruction_of_the_Tree/main.cpp)

add_executable(ALDS1_Binary_Search_Tree1 ALDS1_Binary_Search_Tree1/main.cpp)

add_executable(ALDS1_Binary_Search_Tree2 ALDS1_Binary_Search_Tree2/main.cpp)

add_executable(ALDS1_Binary_Search_Tree3 ALDS1_Binary_Search_Tree3/main.cpp)

add_executable(ALDS1_Complete_Binary_Tree ALDS1_Complete_Binary_Tree/main.cpp)

add_executable(ALDS1_Maximum_Heap ALDS1_Maximum_Heap/main.cpp)

add_executable(ALDS_Priority_Queue ALDS_Priority_Queue/main.cpp)

add_executable(ITP1_Hello_World ITP1_Hello_World/main.cpp)

add_executable(ITP1_X_Cubic ITP1_X_Cubic/main.cpp)

add_executable(ITP1_Rectangle ITP1_Rectangle/main.cpp)
