cmake_minimum_required(VERSION 3.14)
project(aoj)

set(CMAKE_CXX_STANDARD 17)

# Contest abc 130
add_executable(ALDS1_Stack_main ALDS1_Stack/main.cpp)
add_executable(ALDS1_Stack_test ALDS1_Stack/test.cpp)
add_executable(ALDS1_Allocation_main ALDS1_Allocation/main.cpp)
add_executable(ALDS1_Allocation_test ALDS1_Allocation/test.cpp)
add_executable(ALDS1_Exhaustive_Search_main ALDS1_Exhaustive_Search/main.cpp)
add_executable(ALDS1_Exhaustive_Search_test ALDS1_Exhaustive_Search/test.cpp)
add_executable(ALDS1_Koch_Curve ALDS1_Koch_Curve/main.cpp)
add_executable(ALDS1_Merge_Sort ALDS1_Merge_Sort/main.cpp)
add_executable(ALDS1_Partition ALDS1_Partition/main.cpp)
add_executable(ALDS1_Quick_Sort ALDS1_Quick_Sort/main.cpp)
add_executable(ALDS1_Counting_Sort ALDS1_Counting_Sort/main.cpp)
add_executable(ALDS1_Rooted_Trees ALDS1_Rooted_Trees/main.cpp)
add_executable(ALDS1_Binary_Tree ALDS1_Binary_Tree/main.cpp)
add_executable(ALDS1_Tree_Walk ALDS1_Tree_Walk/main.cpp)
add_executable(ALDS1_Reconstruction_of_the_Tree ALDS1_Reconstruction_of_the_Tree/main.cpp)
add_executable(ALDS1_Binary_Search_Tree1 ALDS1_Binary_Search_Tree1/main.cpp)
add_executable(ALDS1_Binary_Search_Tree2 ALDS1_Binary_Search_Tree2/main.cpp)
add_executable(ALDS1_Binary_Search_Tree3 ALDS1_Binary_Search_Tree3/main.cpp)
add_executable(ALDS1_Complete_Binary_Tree ALDS1_Complete_Binary_Tree/main.cpp)
add_executable(ALDS1_Maximum_Heap ALDS1_Maximum_Heap/main.cpp)
add_executable(ALDS_Priority_Queue ALDS_Priority_Queue/main.cpp)
add_executable(ITP1_Hello_World ITP1_Hello_World/main.cpp)
add_executable(ITP1_X_Cubic ITP1_X_Cubic/main.cpp)
add_executable(ITP1_Rectangle ITP1_Rectangle/main.cpp)
add_executable(ITP1_Watch ITP1_Watch/main.cpp)
add_executable(ITP1_Small_Large_or_Equal ITP1_Small_Large_or_Equal/main.cpp)
add_executable(ITP1_Range ITP1_Range/main.cpp)
add_executable(ITP1_Sorting_Three_Numbers ITP1_Sorting_Three_Numbers/main.cpp)
add_executable(ITP1_Circle_in_a_Rectangle ITP1_Circle_in_a_Rectangle/main.cpp)
add_executable(ITP1_Print_Many_Hello_World ITP1_Print_Many_Hello_World/main.cpp)
add_executable(ITP1_Print_Test_Cases ITP1_Print_Test_Cases/main.cpp)
add_executable(ITP1_Swapping_Two_Numbers ITP1_Swapping_Two_Numbers/main.cpp)
add_executable(ITP1_How_Many_Divisors ITP1_How_Many_Divisors/main.cpp)
add_executable(ALDS1_Fibonacci_Number ALDS1_Fibonacci_Number/main.cpp)
add_executable(ALDS1_Longest_Common_Subsequence ALDS1_Longest_Common_Subsequence/main.cpp)
add_executable(ITP1_How_many_ways ITP1_How_many_ways/main.cpp)
add_executable(ALDS1_Matrix_Chain_Multiplication ALDS1_Matrix_Chain_Multiplication/main.cpp)
add_executable(ALDS1_Graph ALDS1_Graph/main.cpp)
add_executable(ALDS1_Depth_First_Search ALDS1_Depth_First_Search/main.cpp)
add_executable(ALDS1_Breadth_First_Search ALDS1_Breadth_First_Search/main.cpp)
